[package]
name = "docker-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = [] }

